Initial Commit on Test Branch

--- a/.github/workflows/frame-tests.yml
+++ b/.github/workflows/frame-tests.yml
@@ -1,45 +1,45 @@
-# name: Run Frame Tests - Daily and Weekly
+name: Run Frame Tests - Daily and Weekly
 
-# on:
-#   workflow_dispatch:
-#     inputs:
-#       frame-group:
-#         description: 'Choose a predefined Frame group (ignored if custom tags are set below)'
-#         required: false
-#         default: 'FRAME'
-#         type: choice
-#         options:
-#           - FRAME
-#           - IFRAME
-#           - AFRAME
-#           - BFRAME
+on:
+  workflow_dispatch:
+    inputs:
+      frame-group:
+        description: 'Choose a predefined Frame group (ignored if custom tags are set below)'
+        required: false
+        default: 'FRAME'
+        type: choice
+        options:
+          - FRAME
+          - IFRAME
+          - AFRAME
+          - BFRAME
 
-#       custom-scenario-tags:
-#         description: 'Optional: Enter custom scenario tags (comma-separated, e.g., AFRAME,BFRAME). Overrides the dropdown above.'
-#         required: false
-#         default: ''
+      custom-scenario-tags:
+        description: 'Optional: Enter custom scenario tags (comma-separated, e.g., AFRAME,BFRAME). Overrides the dropdown above.'
+        required: false
+        default: ''
 
-#       tag-filter:
-#         description: 'Frequency tags (e.g., DAILY, WEEKLY)'
-#         required: true
-#         default: 'DAILY|WEEKLY'
+      tag-filter:
+        description: 'Frequency tags (e.g., DAILY, WEEKLY)'
+        required: true
+        default: 'DAILY|WEEKLY'
 
-#   schedule:
-#     - cron: "20 11 * * *"     # 2:48 PM IST daily
-#     - cron: "30 9 * * 4"      # 3:00 PM IST Thursday
+  schedule:
+    - cron: "20 11 * * *"     # 2:48 PM IST daily
+    - cron: "30 9 * * 4"      # 3:00 PM IST Thursday
 
-# jobs:
-#   frame-test-run:
-#     uses: ./.github/workflows/test-runner.yml
-#     with:
-#       scenario-tags: ${{ github.event.inputs.custom-scenario-tags != '' && github.event.inputs.custom-scenario-tags || github.event.inputs.frame-group }}
-#       tag-filter: ${{ github.event.inputs.tag-filter || 'DAILY|WEEKLY' }}
-#     secrets:
-#       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
-#       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
-#       TESTRAIL_HOST: ${{ secrets.TESTRAIL_HOST }}
-#       TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
-#       TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
+jobs:
+  frame-test-run:
+    uses: ./.github/workflows/test-runner.yml
+    with:
+      scenario-tags: ${{ github.event.inputs.custom-scenario-tags != '' && github.event.inputs.custom-scenario-tags || github.event.inputs.frame-group }}
+      tag-filter: ${{ github.event.inputs.tag-filter || 'DAILY|WEEKLY' }}
+    secrets:
+      TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
+      TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
+      TESTRAIL_HOST: ${{ secrets.TESTRAIL_HOST }}
+      TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
+      TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
 
 
 
