--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
         "ts-node": "^10.9.2",
         "tsx": "^4.7.0",
         "typescript": "^5.3.3",
+        "wdio-chromedriver-service": "^8.1.1",
         "wdio-testrail-reporter": "^1.1.5"
     },
     "dependencies": {
         "axios": "^1.6.0",
-        "chromedriver": "^131.0.0",
+        "chromedriver": "^137.0.2",
         "dotenv": "^16.4.5",
         "xml2js": "^0.6.2"
     }
