--- a/.github/workflows/run-from-excel.yml
+++ b/.github/workflows/run-from-excel.yml
@@ -24,10 +24,12 @@ jobs:
           npm ci
           npm install xlsx --save-dev
 
-      - name: Ensure Excel was pushed, not just code
+      - name: Abort if tag-priority.xlsx not found
         run: |
-          git fetch origin ${{ github.ref }}
-          git diff --name-only origin/${{ github.ref_name }} | grep 'tag-priority.xlsx' || (echo " tag-priority.xlsx not uploaded — exiting" && exit 1)
+          if [ ! -f tag-priority.xlsx ]; then
+            echo " tag-priority.xlsx not uploaded — exiting"
+            exit 1
+          fi
 
       - name: Extract and run tags sequentially
         run: |
@@ -50,7 +52,7 @@ jobs:
             }
 
             if (tags.length === 0) {
-              console.error(' No valid tags found in Excel!');
+              console.error('No valid tags found in Excel!');
               process.exit(1);
             }
 
@@ -65,14 +67,14 @@ jobs:
             ESCAPED=$(jq -r ".[$i].escaped" tag_list.json)
 
             echo "========================================"
-            echo "Running tests for tag: $RAW"
+            echo " Running tests for tag: $RAW"
             echo "Escaped grep: $ESCAPED"
             echo "========================================"
 
             npx wdio run ./wdio.conf.ts --mochaOpts.grep="$ESCAPED" | tee output_$i.log
 
             if grep -q '0 passed' output_$i.log; then
-              echo " No tests matched tag: $RAW"
+              echo "No tests matched tag: $RAW"
               echo "$RAW" >> missing-tags.txt
             else
               echo " Tag $RAW executed with tests"
@@ -85,6 +87,7 @@ jobs:
           git commit -m "Remove tag-priority.xlsx post execution" || echo "Nothing to commit"
           git push origin || echo "Nothing to push"
 
-      - name: Cleanup temp files
+      - name: Final cleanup
         run: |
-          rm -f tag_list.json missing-tags.txt output_*.log
+          echo " Cleaning up temp files..."
+          rm -f tag-priority.xlsx tag_list.json missing-tags.txt output_*.log
