--- a/.github/workflows/frame3.yml
+++ b/.github/workflows/frame3.yml
@@ -1,27 +1,21 @@
-name: Execute Tests Based on Excel Tags
+name: FRAME3 Tests via Excel Tags
 
 on:
-  workflow_dispatch:
   push:
     paths:
       - 'tag-priority.xlsx'
 
-permissions:
-  contents: write
-
 jobs:
-  run-priority-tests:
+  run-FRAME3-tests:
+    if: github.event.head_commit.message != ''
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
-      - name: Setup Git identity and remote auth
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "github-actions[bot]"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -32,71 +26,61 @@ jobs:
         run: |
           npm ci
           npm install xlsx --save-dev
-          sudo apt-get install jq
+          npm install jq --save-dev
 
-      - name: Check if Excel file exists
+      - name: Extract FRAME3 tags from Excel
         run: |
-          if [ ! -f "tag-priority.xlsx" ]; then
-            echo " tag-priority.xlsx not found. Skipping test run."
-            exit 1
-          fi
-
-      - name: Extract and run tags sequentially
-        run: |
-          echo "Reading Excel and running each tag one by one..."
+          echo "Reading Excel and filtering FRAME3 tags..."
 
           node -e "
             const fs = require('fs');
             const xlsx = require('xlsx');
-            const workbook = xlsx.readFile('./tag-priority.xlsx');
+            const workbook = xlsx.readFile('tag-priority.xlsx');
             const sheet = workbook.Sheets[workbook.SheetNames[0]];
             const data = xlsx.utils.sheet_to_json(sheet, { header: 1 });
 
             const tags = [];
             for (let i = 1; i < data.length; i++) {
               const cell = (data[i][0] || '').toString().trim();
-              if (!cell) continue;
+              if (!cell || !cell.includes('[FRAME3]')) continue;
               const rawTag = cell.startsWith('[') ? cell : '[' + cell + ']';
               const escapedTag = rawTag.replace(/\[/g, '\\\\[').replace(/\]/g, '\\\\]');
               tags.push({ raw: rawTag, escaped: escapedTag });
             }
 
             if (tags.length === 0) {
-              console.error(' No valid tags found in Excel!');
+              console.error('No FRAME3 tags found!');
               process.exit(1);
             }
 
             fs.writeFileSync('tag_list.json', JSON.stringify(tags, null, 2));
           "
 
+      - name: Run FRAME3 tests
+        run: |
           TAG_COUNT=$(jq length tag_list.json)
-          echo "Found $TAG_COUNT tags"
+          echo "Found $TAG_COUNT FRAME3 tags"
 
           for i in $(seq 0 $((TAG_COUNT - 1))); do
             RAW=$(jq -r ".[$i].raw" tag_list.json)
             ESCAPED=$(jq -r ".[$i].escaped" tag_list.json)
 
-            echo "========================================"
-            echo "Running tests for tag: $RAW"
-            echo "Escaped grep: $ESCAPED"
-            echo "========================================"
-
+            echo "Running test for tag: $RAW"
             npx wdio run ./wdio.conf.ts --mochaOpts.grep="$ESCAPED" | tee output_$i.log
 
             if grep -q '0 passed' output_$i.log; then
-              echo "No tests matched tag: $RAW"
               echo "$RAW" >> missing-tags.txt
-            else
-              echo "Tag $RAW executed with tests"
             fi
           done
 
-      - name: Cleanup uploaded Excel
+      - name: Clean up Excel and logs
         run: |
-          git rm -f tag-priority.xlsx || true
-          git commit -m "Remove tag-priority.xlsx post execution" || echo "Nothing to commit"
-          git push origin || echo "Nothing to push"
+          rm -f tag_list.json output_*.log
 
-      - name: Final cleanup of local temp files
+      - name: Remove tag-priority.xlsx from repo
         run: |
-          rm -f tag_list.json missing-tags.txt output_*.log
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git rm -f tag-priority.xlsx || true
+          git commit -m "Remove tag-priority.xlsx post FRAME3 test run" || echo "Nothing to commit"
+          git push origin || echo "Nothing to push"
